force-app/main/default/objects/Spreading_Policy__c/Spreading_Policy__c.object-meta.xml
<CustomObject>
    <description>Versioned bank-specific financial spreading threshold policy.</description>
    <label>Spreading Policy</label>
    <nameField>
        <label>Spreading Policy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Spreading Policies</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>