force-app/main/default/objects/Spreading_Policy__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <label>Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Approved Spreading Policies</relationshipLabel>
    <relationshipName>Approved_Spreading_Policies</relationshipName>
    <type>Lookup</type>
</CustomField>