force-app/main/default/objects/Spreading_Policy__c/fields/Borrower_Size__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Size__c</fullName>
    <label>Borrower Size</label>
    <length>80</length>
    <type>Text</type>
</CustomField>