force-app/main/default/objects/Spreading_Policy__c/fields/Change_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Change_Rationale__c</fullName>
    <label>Change Rationale</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>