force-app/main/default/objects/Spreading_Policy__c/fields/Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Portfolio__c</fullName>
    <label>Portfolio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C&amp;I</fullName>
                <default>true</default>
                <label>C&amp;I</label>
            </value>
            <value>
                <fullName>CRE</fullName>
            </value>
            <value>
                <fullName>SBA</fullName>
            </value>
            <value>
                <fullName>ABL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>