force-app/main/default/objects/Spreading_Policy__c/fields/Secondary_Approved_At__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Approved_At__c</fullName>
    <label>Secondary Approved At</label>
    <type>DateTime</type>
</CustomField>