force-app/main/default/objects/Spreading_Policy__c/fields/Secondary_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Approved_By__c</fullName>
    <label>Secondary Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Secondary Approved Spreading Policies</relationshipLabel>
    <relationshipName>Secondary_Approved_Spreading_Policies</relationshipName>
    <type>Lookup</type>
</CustomField>